# rest-api-sqlite

./: Dockerfile  README.md  pyproject.toml
db/: Chinook_Sqlite_db.sqlite
rest_api_sqlite/: queries.py  service.py
src/rest_api_sqlite/: main.py
test/: test_main.py
