[tool.poetry]
name = "rest-api-sqlite"
version = "0.1.0"
description = "REST API service to get costumers invoices payment using Fast API and SQLite"
authors = ["Valeria Dolce <valeria.dolce92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
